make/y.output
Terminals unused in grammar

   t_constant
   t_chan
   t_go
   t_range
   t_select
   t_fallthrough
   t_or_const
   t_and_const
   t_param_const
   t_eq_const
   t_rel_const
   t_point_const
   t_punc
   t_char_const
   t_ampersand
   '+'
   '-'
   '*'
   '/'


Grammar

    0 $accept: START $end

    1 START: START GLOBAL END_SYMBOLS
    2      | GLOBAL END_SYMBOLS
    3      | START END_SYMBOLS

    4 GLOBAL: PACKAGE
    5       | IMPORT
    6       | FUNC
    7       | STRUCT
    8       | INTERFACE

    9 PACKAGE: t_package t_id

   10 IMPORT: t_import t_string
   11       | t_import t_open_paren PARAM_IMPORT t_close_paren
   12       | t_import t_open_paren t_enter PARAM_IMPORT t_close_paren
   13       | t_import t_id t_string

   14 FUNC: t_func t_id t_open_paren FUNC_PARAM t_close_paren FUNC_SECOND_PART

   15 FUNC_PARAM: FUNC_PARAM_FULFILL
   16           | FUNC_PARAM t_comma FUNC_PARAM_FULFILL

   17 FUNC_SECOND_PART: BODY
   18                 | FUNC_RETURN_VALUE TYPE_AND_STRUCT BODY
   19                 | FUNC_PARAM_SECOND BODY

   20 FUNC_PARAM_SECOND: FUNC_PARAM_SECOND_START FUNC_PARAM_SECOND_END
   21                  | t_open_paren t_close_paren

   22 FUNC_PARAM_SECOND_START: t_open_paren
   23                        | FUNC_PARAM_SECOND_START FUNC_PARAM_FULFILL_SECOND

   24 FUNC_PARAM_SECOND_END: FUNC_PARAM_FULFILL_SECOND_END t_close_paren

   25 FUNC_PARAM_FULFILL: t_id TYPE_AND_STRUCT
   26                   | t_id
   27                   | /* empty */

   28 FUNC_PARAM_FULFILL_SECOND: t_id TYPE_AND_STRUCT t_comma
   29                          | TYPE_AND_STRUCT t_comma
   30                          | t_enter

   31 FUNC_PARAM_FULFILL_SECOND_END: t_id TYPE_AND_STRUCT
   32                              | TYPE_AND_STRUCT
   33                              | t_enter

   34 FUNC_RETURN_VALUE: FUNC_RETURN_VALUE_FULFILL
   35                  | FUNC_RETURN_VALUE FUNC_RETURN_VALUE_FULFILL

   36 FUNC_RETURN_VALUE_FULFILL: t_func t_open_paren TYPE_AND_STRUCT t_close_paren
   37                          | t_func t_open_paren t_close_paren

   38 TYPE_AND_STRUCT: t_vtype
   39                | t_id

   40 BODY: BODY_START BODY_END

   41 BODY_END: t_close_br

   42 BODY_START: t_open_br
   43           | BODY_START BODY_FILLING END_SYMBOLS
   44           | BODY_START END_SYMBOLS

   45 BODY_FILLING: VAR
   46             | FOR
   47             | SWITCH
   48             | GOTO
   49             | LABEL
   50             | IF
   51             | MULTI_AR
   52             | FUNC_CALL
   53             | SHORT_EXPR
   54             | ARRAY_BODY
   55             | RETURN
   56             | STRUCT
   57             | SLICE
   58             | DEFER
   59             | METHOD
   60             | INTERFACE

   61 VAR: t_var t_id ASSIGNMENT EXPR
   62    | t_var t_id ASSIGNMENT EXPR t_vtype
   63    | t_var t_id ASSIGNMENT BOOLEAN
   64    | t_id SHORT_ASSIGN EXPR
   65    | t_id ASSIGNMENT EXPR
   66    | t_id SHORT_ASSIGN MULTI_AR t_vtype PLENTY
   67    | t_var t_id ASSIGNMENT MULTI_AR t_vtype PLENTY
   68    | t_id SHORT_ASSIGN BOOLEAN
   69    | t_id MULTI_AR ASSIGNMENT EXPR
   70    | t_var t_id ASSIGNMENT MAKE
   71    | t_id SHORT_ASSIGN MAKE
   72    | t_id MULTI_AR ASSIGNMENT MAKE
   73    | t_id SHORT_ASSIGN SLICE
   74    | t_id ASSIGNMENT SLICE
   75    | t_var t_id ASSIGNMENT SLICE
   76    | t_var t_id MAPS
   77    | t_id SHORT_ASSIGN t_make t_open_paren MAPS t_close_paren
   78    | t_var t_id t_id ASSIGNMENT ST_EMBEDDED
   79    | t_var t_id ASSIGNMENT ST_EMBEDDED
   80    | t_id SHORT_ASSIGN ST_EMBEDDED
   81    | METHOD ASSIGNMENT VALUE
   82    | POINTER ASSIGNMENT EXPR
   83    | t_var t_id POINTER
   84    | t_var t_id POINTER ASSIGNMENT EXPR
   85    | t_var t_id t_id ASSIGNMENT VALUE

   86 BOOLEAN: VALUE t_bool VALUE
   87        | BOOLEAN t_bool VALUE

   88 DEFER: t_defer FUNC_CALL

   89 ASSIGNMENT: t_vtype t_equality
   90           | t_equality
   91           | t_comma t_id ASSIGNMENT EXPR t_comma
   92           | t_comma t_id ASSIGNMENT BOOLEAN t_comma

   93 SHORT_ASSIGN: t_short_dec
   94             | t_comma t_id SHORT_ASSIGN EXPR t_comma
   95             | t_comma t_id SHORT_ASSIGN BOOLEAN t_comma

   96 FUNC_CALL: t_id PARAM

   97 PARAM: PARAM_START PARAM_END
   98      | t_open_paren t_close_paren

   99 PARAM_START: t_open_paren
  100            | PARAM_START PARAM_FULFILL

  101 PARAM_END: PARAM_END_FULFILL t_close_paren

  102 PARAM_END_FULFILL: EXPR
  103                  | t_enter

  104 PARAM_FULFILL: EXPR t_comma
  105              | t_enter

  106 SHIFT: SHIFT_AC t_shift_const SHIFT_AC

  107 SHIFT_AC: t_id
  108         | t_int_const

  109 METHOD: METHOD_FULFILL t_dot METHOD_FULFILL
  110       | METHOD t_dot METHOD_FULFILL

  111 METHOD_FULFILL: t_id
  112               | FUNC_CALL

  113 POINTER: t_pointer

  114 PARAM_IMPORT: t_string END_SYMBOLS
  115             | t_id t_string END_SYMBOLS
  116             | PARAM_IMPORT t_string END_SYMBOLS
  117             | PARAM_IMPORT t_id t_string END_SYMBOLS

  118 VALUE: t_int_const
  119      | t_float_const
  120      | t_id
  121      | t_string
  122      | t_rune
  123      | t_blank_identifier
  124      | FUNC_CALL
  125      | SHIFT
  126      | POINTER
  127      | METHOD
  128      | EXPR_START EXPR EXPR_END
  129      | EXPR_START BOOLEAN EXPR_END

  130 GOTO: t_goto t_id

  131 LABEL: t_id t_colon

  132 SWITCH: t_switch INIT_STATE t_semicolon EXPR SWITCH_BODY
  133       | t_switch EXPR SWITCH_BODY
  134       | t_switch SWITCH_BODY

  135 SWITCH_BODY: SWITCH_BODY_START SWITCH_BODY_END
  136            | SWITCH_BODY_START_WITH_DEFAULT SWITCH_BODY_END

  137 SWITCH_BODY_START: t_open_br
  138                  | SWITCH_BODY_START END_SYMBOLS
  139                  | SWITCH_BODY_START CASE

  140 SWITCH_BODY_START_WITH_DEFAULT: SWITCH_BODY_START DEFAULT
  141                               | SWITCH_BODY_START_WITH_DEFAULT CASE

  142 CASE: t_case CASE_STATEMENT CASE_BODY

  143 DEFAULT: t_default CASE_BODY

  144 MULTIPLE_ARG: FIRST_PART SECOND_PART

  145 FIRST_PART: EXPR t_comma
  146           | FIRST_PART EXPR t_comma

  147 SECOND_PART: EXPR

  148 CASE_STATEMENT: MULTIPLE_ARG
  149               | EXPR

  150 CASE_BODY: t_colon
  151          | CASE_BODY LOOP_FILLING END_SYMBOLS

  152 SWITCH_BODY_END: t_close_br

  153 IF: IF_FIRST MULTY_ELSEIF_SECOND MULTY_ELSE_THIRD
  154   | IF_FIRST MULTY_ELSEIF_SECOND
  155   | IF_FIRST MULTY_ELSE_THIRD
  156   | IF_FIRST

  157 IF_FIRST: t_if CONDITION BODY_FOR_LOOP
  158         | t_if INIT_STATE t_semicolon CONDITION BODY_FOR_LOOP

  159 BODY_FOR_LOOP: BODY_FOR_LOOP_START BODY_FOR_LOOP_END

  160 BODY_FOR_LOOP_START: t_open_br
  161                    | t_open_br END_SYMBOLS
  162                    | BODY_FOR_LOOP_START LOOP_FILLING END_SYMBOLS

  163 BODY_FOR_LOOP_END: t_close_br

  164 LOOP_FILLING: BODY_FILLING
  165             | t_break
  166             | t_continue

  167 MULTY_ELSEIF_SECOND: ELSEIF_SECOND
  168                    | MULTY_ELSEIF_SECOND ELSEIF_SECOND

  169 ELSEIF_SECOND: t_else t_if CONDITION BODY_FOR_LOOP

  170 MULTY_ELSE_THIRD: ELSE_THIRD
  171                 | MULTY_ELSE_THIRD ELSE_THIRD

  172 ELSE_THIRD: t_else BODY_FOR_LOOP

  173 RETURN: t_return EXPR
  174       | t_return EXPR MANY_RETURN_START MANY_RETURN_START_END

  175 MANY_RETURN_START: t_comma
  176                  | MANY_RETURN_START EXPR t_comma

  177 MANY_RETURN_START_END: EXPR

  178 EXPR: VALUE
  179     | EXPR t_sign VALUE

  180 SHORT_EXPR: t_id t_short_expr t_id

  181 INIT_STATE: VAR
  182           | FUNC_CALL
  183           | /* empty */

  184 CONDITION: BOOLEAN
  185          | t_true
  186          | t_false
  187          | /* empty */

  188 POST_STATE: EXPR
  189           | t_id t_inc_const

  190 FOR: t_for INIT_STATE t_semicolon CONDITION t_semicolon POST_STATE BODY_FOR_LOOP
  191    | t_for CONDITION BODY_FOR_LOOP

  192 EXPR_START: t_open_paren

  193 EXPR_END: t_close_paren

  194 ARRAY_BODY: t_var t_id MULTI_AR t_vtype
  195           | t_var t_id MULTI_AR t_vtype ASSIGNMENT MULTI_AR t_vtype PLENTY
  196           | t_var t_id MULTI_AR t_vtype ASSIGNMENT MAKE

  197 ARRAY_INDEX: t_open_sq t_int_const t_close_sq
  198            | t_open_sq t_id t_close_sq
  199            | t_open_sq t_string t_close_sq
  200            | t_open_sq t_close_sq

  201 MULTI_AR: ARRAY_INDEX
  202         | ARRAY_INDEX MULTI_AR

  203 PLENTY: PLENTY_OLD
  204       | PLENTY_OLD t_comma PLENTY

  205 PLENTY_OLD: t_open_br ENUM t_close_br
  206           | t_open_br t_close_br
  207           | t_open_br PLENTY t_close_br

  208 ENUM: VALUE
  209     | ENUM t_comma VALUE

  210 MAKE: t_make t_open_paren MULTI_AR t_vtype t_comma VALUE t_close_paren
  211     | t_make t_open_paren MULTI_AR t_vtype t_comma VALUE t_comma t_int_const VALUE

  212 SLICE: t_id t_open_sq VALUE t_colon VALUE t_close_sq
  213      | t_id t_open_sq t_colon VALUE t_close_sq
  214      | t_id t_open_sq VALUE t_colon t_close_sq

  215 MAPS: t_map t_open_sq t_vtype t_close_sq t_vtype

  216 STRUCT: STRUCT_START

  217 STRUCT_BODY: ENUM t_vtype
  218            | t_id t_id
  219            | t_id
  220            | t_id METHOD
  221            | STRUCT_BODY END_SYMBOLS t_id METHOD
  222            | STRUCT_BODY END_SYMBOLS t_id t_vtype
  223            | STRUCT_BODY END_SYMBOLS t_id t_id
  224            | STRUCT_BODY END_SYMBOLS t_id

  225 STRUCT_START: t_type t_id t_struct_const t_open_br STRUCT_END
  226             | t_type t_id t_struct_const t_open_br STRUCT_BODY STRUCT_END
  227             | t_type t_id t_struct_const t_open_br END_SYMBOLS STRUCT_BODY STRUCT_END
  228             | t_type t_id t_struct_const t_enter

  229 STRUCT_END: t_close_br
  230           | t_enter t_close_br

  231 FIELD: t_id FIELD_BODY

  232 FIELD_BODY: FIELD_START FIELD_END

  233 FIELD_START: t_open_br
  234            | FIELD_START FIELD_FULFILL

  235 FIELD_FULFILL: VALUE t_colon VALUE t_comma
  236              | VALUE t_colon FIELD t_comma
  237              | t_enter

  238 FIELD_END: FIELD_END_FULFILL t_close_br

  239 FIELD_END_FULFILL: VALUE t_colon VALUE
  240                  | t_enter

  241 ST_EMBEDDED: FIELD

  242 END_SYMBOLS: t_semicolon
  243            | t_enter
  244            | t_eof

  245 INTERFACE: INT_START

  246 INT_START: t_type t_id t_interface t_open_br INT_BODY INT_END
  247          | t_type t_id t_interface t_open_br END_SYMBOLS INT_BODY INT_END
  248          | t_type t_id t_interface t_enter t_open_br END_SYMBOLS INT_BODY INT_END

  249 INT_BODY: FUNC_CALL
  250         | FUNC_CALL t_vtype
  251         | t_id t_open_paren t_vtype t_close_paren
  252         | INT_BODY END_SYMBOLS t_id t_open_paren t_vtype t_close_paren
  253         | INT_BODY END_SYMBOLS FUNC_CALL t_vtype
  254         | INT_BODY END_SYMBOLS FUNC_CALL

  255 INT_END: t_close_br
  256        | t_enter t_close_br


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
error (256)
t_vtype (258) 38 62 66 67 89 194 195 196 210 211 215 217 222 250 251
    252 253
t_constant (259)
t_case (260) 142
t_func (261) 14 36 37
t_import (262) 10 11 12 13
t_chan (263)
t_defer (264) 88
t_go (265)
t_interface (266) 246 247 248
t_default (267) 143
t_var (268) 61 62 63 67 70 75 76 78 79 83 84 85 194 195 196
t_range (269)
t_map (270) 215
t_package (271) 9
t_if (272) 157 158 169
t_select (273)
t_switch (274) 132 133 134
t_fallthrough (275)
t_else (276) 169 172
t_type (277) 225 226 227 228 246 247 248
t_for (278) 190 191
t_goto (279) 130
t_continue (280) 166
t_break (281) 165
t_return (282) 173 174
t_struct_const (283) 225 226 227 228
t_or_const (284)
t_and_const (285)
t_param_const (286)
t_eq_const (287)
t_rel_const (288)
t_shift_const (289) 106
t_inc_const (290) 189
t_point_const (291)
t_punc (292)
t_int_const (293) 108 118 197 211
t_float_const (294) 119
t_char_const (295)
t_id (296) 9 13 14 25 26 28 31 39 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 83 84 85 91 92 94 95 96 107 111 115
    117 120 130 131 180 189 194 195 196 198 212 213 214 218 219 220
    221 222 223 224 225 226 227 228 231 246 247 248 251 252
t_string (297) 10 13 114 115 116 117 121 199
t_short_dec (298) 93
t_open_br (299) 42 137 160 161 205 206 207 225 226 227 233 246 247
    248
t_close_br (300) 41 152 163 205 206 207 229 230 238 255 256
t_sign (301) 179
t_comma (302) 16 28 29 91 92 94 95 104 145 146 175 176 204 209 210
    211 235 236
t_equality (303) 89 90
t_open_paren (304) 11 12 14 21 22 36 37 77 98 99 192 210 211 251 252
t_close_paren (305) 11 12 14 21 24 36 37 77 98 101 193 210 251 252
t_open_sq (306) 197 198 199 200 212 213 214 215
t_close_sq (307) 197 198 199 200 212 213 214 215
t_bool (308) 86 87
t_rune (309) 122
t_semicolon (310) 132 158 190 242
t_blank_identifier (311) 123
t_dot (312) 109 110
t_colon (313) 131 150 212 213 214 235 236 239
t_true (314) 185
t_false (315) 186
t_short_expr (316) 180
t_make (317) 77 210 211
t_enter (318) 12 30 33 103 105 228 230 237 240 243 248 256
t_eof (319) 244
t_pointer (320) 113
t_ampersand (321)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
START (72)
    on left: 1 2 3, on right: 0 1 3
GLOBAL (73)
    on left: 4 5 6 7 8, on right: 1 2
PACKAGE (74)
    on left: 9, on right: 4
IMPORT (75)
    on left: 10 11 12 13, on right: 5
FUNC (76)
    on left: 14, on right: 6
FUNC_PARAM (77)
    on left: 15 16, on right: 14 16
FUNC_SECOND_PART (78)
    on left: 17 18 19, on right: 14
FUNC_PARAM_SECOND (79)
    on left: 20 21, on right: 19
FUNC_PARAM_SECOND_START (80)
    on left: 22 23, on right: 20 23
FUNC_PARAM_SECOND_END (81)
    on left: 24, on right: 20
FUNC_PARAM_FULFILL (82)
    on left: 25 26 27, on right: 15 16
FUNC_PARAM_FULFILL_SECOND (83)
    on left: 28 29 30, on right: 23
FUNC_PARAM_FULFILL_SECOND_END (84)
    on left: 31 32 33, on right: 24
FUNC_RETURN_VALUE (85)
    on left: 34 35, on right: 18 35
FUNC_RETURN_VALUE_FULFILL (86)
    on left: 36 37, on right: 34 35
TYPE_AND_STRUCT (87)
    on left: 38 39, on right: 18 25 28 29 31 32 36
BODY (88)
    on left: 40, on right: 17 18 19
BODY_END (89)
    on left: 41, on right: 40
BODY_START (90)
    on left: 42 43 44, on right: 40 43 44
BODY_FILLING (91)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60, on right:
    43 164
VAR (92)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85, on right: 45 181
BOOLEAN (93)
    on left: 86 87, on right: 63 68 87 92 95 129 184
DEFER (94)
    on left: 88, on right: 58
ASSIGNMENT (95)
    on left: 89 90 91 92, on right: 61 62 63 65 67 69 70 72 74 75 78
    79 81 82 84 85 91 92 195 196
SHORT_ASSIGN (96)
    on left: 93 94 95, on right: 64 66 68 71 73 77 80 94 95
FUNC_CALL (97)
    on left: 96, on right: 52 88 112 124 182 249 250 253 254
PARAM (98)
    on left: 97 98, on right: 96
PARAM_START (99)
    on left: 99 100, on right: 97 100
PARAM_END (100)
    on left: 101, on right: 97
PARAM_END_FULFILL (101)
    on left: 102 103, on right: 101
PARAM_FULFILL (102)
    on left: 104 105, on right: 100
SHIFT (103)
    on left: 106, on right: 125
SHIFT_AC (104)
    on left: 107 108, on right: 106
METHOD (105)
    on left: 109 110, on right: 59 81 110 127 220 221
METHOD_FULFILL (106)
    on left: 111 112, on right: 109 110
POINTER (107)
    on left: 113, on right: 82 83 84 126
PARAM_IMPORT (108)
    on left: 114 115 116 117, on right: 11 12 116 117
VALUE (109)
    on left: 118 119 120 121 122 123 124 125 126 127 128 129, on right:
    81 85 86 87 178 179 208 209 210 211 212 213 214 235 236 239
GOTO (110)
    on left: 130, on right: 48
LABEL (111)
    on left: 131, on right: 49
SWITCH (112)
    on left: 132 133 134, on right: 47
SWITCH_BODY (113)
    on left: 135 136, on right: 132 133 134
SWITCH_BODY_START (114)
    on left: 137 138 139, on right: 135 138 139 140
SWITCH_BODY_START_WITH_DEFAULT (115)
    on left: 140 141, on right: 136 141
CASE (116)
    on left: 142, on right: 139 141
DEFAULT (117)
    on left: 143, on right: 140
MULTIPLE_ARG (118)
    on left: 144, on right: 148
FIRST_PART (119)
    on left: 145 146, on right: 144 146
SECOND_PART (120)
    on left: 147, on right: 144
CASE_STATEMENT (121)
    on left: 148 149, on right: 142
CASE_BODY (122)
    on left: 150 151, on right: 142 143 151
SWITCH_BODY_END (123)
    on left: 152, on right: 135 136
IF (124)
    on left: 153 154 155 156, on right: 50
IF_FIRST (125)
    on left: 157 158, on right: 153 154 155 156
BODY_FOR_LOOP (126)
    on left: 159, on right: 157 158 169 172 190 191
BODY_FOR_LOOP_START (127)
    on left: 160 161 162, on right: 159 162
BODY_FOR_LOOP_END (128)
    on left: 163, on right: 159
LOOP_FILLING (129)
    on left: 164 165 166, on right: 151 162
MULTY_ELSEIF_SECOND (130)
    on left: 167 168, on right: 153 154 168
ELSEIF_SECOND (131)
    on left: 169, on right: 167 168
MULTY_ELSE_THIRD (132)
    on left: 170 171, on right: 153 155 171
ELSE_THIRD (133)
    on left: 172, on right: 170 171
RETURN (134)
    on left: 173 174, on right: 55
MANY_RETURN_START (135)
    on left: 175 176, on right: 174 176
MANY_RETURN_START_END (136)
    on left: 177, on right: 174
EXPR (137)
    on left: 178 179, on right: 61 62 64 65 69 82 84 91 94 102 104
    128 132 133 145 146 147 149 173 174 176 177 179 188
SHORT_EXPR (138)
    on left: 180, on right: 53
INIT_STATE (139)
    on left: 181 182 183, on right: 132 158 190
CONDITION (140)
    on left: 184 185 186 187, on right: 157 158 169 190 191
POST_STATE (141)
    on left: 188 189, on right: 190
FOR (142)
    on left: 190 191, on right: 46
EXPR_START (143)
    on left: 192, on right: 128 129
EXPR_END (144)
    on left: 193, on right: 128 129
ARRAY_BODY (145)
    on left: 194 195 196, on right: 54
ARRAY_INDEX (146)
    on left: 197 198 199 200, on right: 201 202
MULTI_AR (147)
    on left: 201 202, on right: 51 66 67 69 72 194 195 196 202 210
    211
PLENTY (148)
    on left: 203 204, on right: 66 67 195 204 207
PLENTY_OLD (149)
    on left: 205 206 207, on right: 203 204
ENUM (150)
    on left: 208 209, on right: 205 209 217
MAKE (151)
    on left: 210 211, on right: 70 71 72 196
SLICE (152)
    on left: 212 213 214, on right: 57 73 74 75
MAPS (153)
    on left: 215, on right: 76 77
STRUCT (154)
    on left: 216, on right: 7 56
STRUCT_BODY (155)
    on left: 217 218 219 220 221 222 223 224, on right: 221 222 223
    224 226 227
STRUCT_START (156)
    on left: 225 226 227 228, on right: 216
STRUCT_END (157)
    on left: 229 230, on right: 225 226 227
FIELD (158)
    on left: 231, on right: 236 241
FIELD_BODY (159)
    on left: 232, on right: 231
FIELD_START (160)
    on left: 233 234, on right: 232 234
FIELD_FULFILL (161)
    on left: 235 236 237, on right: 234
FIELD_END (162)
    on left: 238, on right: 232
FIELD_END_FULFILL (163)
    on left: 239 240, on right: 238
ST_EMBEDDED (164)
    on left: 241, on right: 78 79 80
END_SYMBOLS (165)
    on left: 242 243 244, on right: 1 2 3 43 44 114 115 116 117 138
    151 161 162 221 222 223 224 227 247 248 252 253 254
INTERFACE (166)
    on left: 245, on right: 8 60
INT_START (167)
    on left: 246 247 248, on right: 245
INT_BODY (168)
    on left: 249 250 251 252 253 254, on right: 246 247 248 252 253
    254
INT_END (169)
    on left: 255 256, on right: 246 247 248


State 0

    0 $accept: . START $end

    t_func     shift, and go to state 1
    t_import   shift, and go to state 2
    t_package  shift, and go to state 3
    t_type     shift, and go to state 4

    START         go to state 5
    GLOBAL        go to state 6
    PACKAGE       go to state 7
    IMPORT        go to state 8
    FUNC          go to state 9
    STRUCT        go to state 10
    STRUCT_START  go to state 11
    INTERFACE     go to state 12
    INT_START     go to state 13


State 1

   14 FUNC: t_func . t_id t_open_paren FUNC_PARAM t_close_paren FUNC_SECOND_PART

    t_id  shift, and go to state 14


State 2

   10 IMPORT: t_import . t_string
   11       | t_import . t_open_paren PARAM_IMPORT t_close_paren
   12       | t_import . t_open_paren t_enter PARAM_IMPORT t_close_paren
   13       | t_import . t_id t_string

    t_id          shift, and go to state 15
    t_string      shift, and go to state 16
    t_open_paren  shift, and go to state 17


State 3

    9 PACKAGE: t_package . t_id

    t_id  shift, and go to state 18


State 4

  225 STRUCT_START: t_type . t_id t_struct_const t_open_br STRUCT_END
  226             | t_type . t_id t_struct_const t_open_br STRUCT_BODY STRUCT_END
  227             | t_type . t_id t_struct_const t_open_br END_SYMBOLS STRUCT_BODY STRUCT_END
  228             | t_type . t_id t_struct_const t_enter
  246 INT_START: t_type . t_id t_interface t_open_br INT_BODY INT_END
  247          | t_type . t_id t_interface t_open_br END_SYMBOLS INT_BODY INT_END
  248          | t_type . t_id t_interface t_enter t_open_br END_SYMBOLS INT_BODY INT_END

    t_id  shift, and go to state 19


State 5

    0 $accept: START . $end
    1 START: START . GLOBAL END_SYMBOLS
    3      | START . END_SYMBOLS

    $end         shift, and go to state 20
    t_func       shift, and go to state 1
    t_import     shift, and go to state 2
    t_package    shift, and go to state 3
    t_type       shift, and go to state 4
    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    GLOBAL        go to state 24
    PACKAGE       go to state 7
    IMPORT        go to state 8
    FUNC          go to state 9
    STRUCT        go to state 10
    STRUCT_START  go to state 11
    END_SYMBOLS   go to state 25
    INTERFACE     go to state 12
    INT_START     go to state 13


State 6

    2 START: GLOBAL . END_SYMBOLS

    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    END_SYMBOLS  go to state 26


State 7

    4 GLOBAL: PACKAGE .

    $default  reduce using rule 4 (GLOBAL)


State 8

    5 GLOBAL: IMPORT .

    $default  reduce using rule 5 (GLOBAL)


State 9

    6 GLOBAL: FUNC .

    $default  reduce using rule 6 (GLOBAL)


State 10

    7 GLOBAL: STRUCT .

    $default  reduce using rule 7 (GLOBAL)


State 11

  216 STRUCT: STRUCT_START .

    $default  reduce using rule 216 (STRUCT)


State 12

    8 GLOBAL: INTERFACE .

    $default  reduce using rule 8 (GLOBAL)


State 13

  245 INTERFACE: INT_START .

    $default  reduce using rule 245 (INTERFACE)


State 14

   14 FUNC: t_func t_id . t_open_paren FUNC_PARAM t_close_paren FUNC_SECOND_PART

    t_open_paren  shift, and go to state 27


State 15

   13 IMPORT: t_import t_id . t_string

    t_string  shift, and go to state 28


State 16

   10 IMPORT: t_import t_string .

    $default  reduce using rule 10 (IMPORT)


State 17

   11 IMPORT: t_import t_open_paren . PARAM_IMPORT t_close_paren
   12       | t_import t_open_paren . t_enter PARAM_IMPORT t_close_paren

    t_id      shift, and go to state 29
    t_string  shift, and go to state 30
    t_enter   shift, and go to state 31

    PARAM_IMPORT  go to state 32


State 18

    9 PACKAGE: t_package t_id .

    $default  reduce using rule 9 (PACKAGE)


State 19

  225 STRUCT_START: t_type t_id . t_struct_const t_open_br STRUCT_END
  226             | t_type t_id . t_struct_const t_open_br STRUCT_BODY STRUCT_END
  227             | t_type t_id . t_struct_const t_open_br END_SYMBOLS STRUCT_BODY STRUCT_END
  228             | t_type t_id . t_struct_const t_enter
  246 INT_START: t_type t_id . t_interface t_open_br INT_BODY INT_END
  247          | t_type t_id . t_interface t_open_br END_SYMBOLS INT_BODY INT_END
  248          | t_type t_id . t_interface t_enter t_open_br END_SYMBOLS INT_BODY INT_END

    t_interface     shift, and go to state 33
    t_struct_const  shift, and go to state 34


State 20

    0 $accept: START $end .

    $default  accept


State 21

  242 END_SYMBOLS: t_semicolon .

    $default  reduce using rule 242 (END_SYMBOLS)


State 22

  243 END_SYMBOLS: t_enter .

    $default  reduce using rule 243 (END_SYMBOLS)


State 23

  244 END_SYMBOLS: t_eof .

    $default  reduce using rule 244 (END_SYMBOLS)


State 24

    1 START: START GLOBAL . END_SYMBOLS

    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    END_SYMBOLS  go to state 35


State 25

    3 START: START END_SYMBOLS .

    $default  reduce using rule 3 (START)


State 26

    2 START: GLOBAL END_SYMBOLS .

    $default  reduce using rule 2 (START)


State 27

   14 FUNC: t_func t_id t_open_paren . FUNC_PARAM t_close_paren FUNC_SECOND_PART

    t_id  shift, and go to state 36

    $default  reduce using rule 27 (FUNC_PARAM_FULFILL)

    FUNC_PARAM          go to state 37
    FUNC_PARAM_FULFILL  go to state 38


State 28

   13 IMPORT: t_import t_id t_string .

    $default  reduce using rule 13 (IMPORT)


State 29

  115 PARAM_IMPORT: t_id . t_string END_SYMBOLS

    t_string  shift, and go to state 39


State 30

  114 PARAM_IMPORT: t_string . END_SYMBOLS

    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    END_SYMBOLS  go to state 40


State 31

   12 IMPORT: t_import t_open_paren t_enter . PARAM_IMPORT t_close_paren

    t_id      shift, and go to state 29
    t_string  shift, and go to state 30

    PARAM_IMPORT  go to state 41


State 32

   11 IMPORT: t_import t_open_paren PARAM_IMPORT . t_close_paren
  116 PARAM_IMPORT: PARAM_IMPORT . t_string END_SYMBOLS
  117             | PARAM_IMPORT . t_id t_string END_SYMBOLS

    t_id           shift, and go to state 42
    t_string       shift, and go to state 43
    t_close_paren  shift, and go to state 44


State 33

  246 INT_START: t_type t_id t_interface . t_open_br INT_BODY INT_END
  247          | t_type t_id t_interface . t_open_br END_SYMBOLS INT_BODY INT_END
  248          | t_type t_id t_interface . t_enter t_open_br END_SYMBOLS INT_BODY INT_END

    t_open_br  shift, and go to state 45
    t_enter    shift, and go to state 46


State 34

  225 STRUCT_START: t_type t_id t_struct_const . t_open_br STRUCT_END
  226             | t_type t_id t_struct_const . t_open_br STRUCT_BODY STRUCT_END
  227             | t_type t_id t_struct_const . t_open_br END_SYMBOLS STRUCT_BODY STRUCT_END
  228             | t_type t_id t_struct_const . t_enter

    t_open_br  shift, and go to state 47
    t_enter    shift, and go to state 48


State 35

    1 START: START GLOBAL END_SYMBOLS .

    $default  reduce using rule 1 (START)


State 36

   25 FUNC_PARAM_FULFILL: t_id . TYPE_AND_STRUCT
   26                   | t_id .

    t_vtype  shift, and go to state 49
    t_id     shift, and go to state 50

    $default  reduce using rule 26 (FUNC_PARAM_FULFILL)

    TYPE_AND_STRUCT  go to state 51


State 37

   14 FUNC: t_func t_id t_open_paren FUNC_PARAM . t_close_paren FUNC_SECOND_PART
   16 FUNC_PARAM: FUNC_PARAM . t_comma FUNC_PARAM_FULFILL

    t_comma        shift, and go to state 52
    t_close_paren  shift, and go to state 53


State 38

   15 FUNC_PARAM: FUNC_PARAM_FULFILL .

    $default  reduce using rule 15 (FUNC_PARAM)


State 39

  115 PARAM_IMPORT: t_id t_string . END_SYMBOLS

    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    END_SYMBOLS  go to state 54


State 40

  114 PARAM_IMPORT: t_string END_SYMBOLS .

    $default  reduce using rule 114 (PARAM_IMPORT)


State 41

   12 IMPORT: t_import t_open_paren t_enter PARAM_IMPORT . t_close_paren
  116 PARAM_IMPORT: PARAM_IMPORT . t_string END_SYMBOLS
  117             | PARAM_IMPORT . t_id t_string END_SYMBOLS

    t_id           shift, and go to state 42
    t_string       shift, and go to state 43
    t_close_paren  shift, and go to state 55


State 42

  117 PARAM_IMPORT: PARAM_IMPORT t_id . t_string END_SYMBOLS

    t_string  shift, and go to state 56


State 43

  116 PARAM_IMPORT: PARAM_IMPORT t_string . END_SYMBOLS

    t_semicolon  shift, and go to state 21
    t_enter      shift, and go to state 22
    t_eof        shift, and go to state 23

    END_SYMBOLS  go to state 57


State 44

   11 IMPORT: t_import t_open_paren PARAM_IMPORT t_close_paren .

    $default  reduce using rule 11 (IMPORT)


State 45

  246 INT_START: t_type t_id t_interface t_open_br . INT_BODY INT_END
  247          | t_type t_id t_interface t_open_br . END_SYMBOLS INT_BODY INT_END
